# stl-viewer

./: .gitignore  CHANGELOG.md  Main.hs  README.org  default.nix  shell.nix  stl-viewer.cabal  stl.cabal
app/: Main.hs  Options.hs  Parser.hs
example/: cube.stl
src/: STL.hs
src/STL/: Parser.hs
