cabal-version:       >=1.10
name:                stl-viewer
version:             0.1.0.0
synopsis:            Primitive STL file viewer using SDL.
description:
  An (arguably) simple and primitive STL file viewer implemented using SDL as
  backend.
license:             MIT
author:              Eduardo V.
maintainer:          lalohao@gmail.com
copyright:           Eduardo V.
category:            graphics
build-type:          Simple
extra-source-files:  CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
  ghc-options:
   -Wall

library
  import: shared-properties
  hs-source-dirs: src/
  exposed-modules:
    STL
    STL.Parser
  build-depends: base >=4.13 && <4.14
               , sdl2
               , sdl2-gfx
               , vector
               , OpenGL
               , bytestring
               , OpenGLRaw
               , parsec
               , parsec3-numbers

executable stl-viewer-app
  build-depends: base
               , stl-viewer
               , OpenGL
               , random
               , GLUT
               , sdl2
               , sdl2-gfx
  main-is:
   Main.hs
  hs-source-dirs:
   app
  ghc-options:
   -Wall -rtsopts -threaded

executable stl-parser-app
  build-depends: base, stl-viewer
  main-is:
   Parser.hs
  hs-source-dirs:
   app
  ghc-options:
   -Wall -rtsopts -threaded
